--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#424242</color>
+    <color name="colorPrimaryDark">#212121</color>
+    <color name="colorAccent">#FFFFFF</color>
     <color name="color_purple">#7B1FA2</color>
     <color name="color_gray_light">#EEEEEE</color>
-    <color name="color_gray_dark">#757575</color>
+    <color name="color_gray_dark">#616161</color>
     <color name="color_black_lighter">#5A6978</color>
 </resources>
